[package]
name = "moex_orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
